<resources>
    <string name="app_name">Bop-It1</string>
    <string name="Text_btn_play">Jugar</string>
    <string name="Text_btn_preferences">Preferencias</string>
    <string name="Text_btn_about">Acerca</string>
    <string name="Text_about">Desarrollado por el estudiante Luis Otárola
        de Ingenieria en Desarrollo de Videojuegos y Realidad Virtual</string>

    <string name="text_levels">Nivel de dificultad</string>
    <string name="text_levels_easy">Facíl</string>
    <string name="text_levels_medium">Medio</string>
    <string name="text_levels_hard">Difícil</string>

    <string name="text_sound">Sonido</string>
    <string name="text_sound_silence">Silencio</string>
    <string name="text_sound_high">Alto</string>
    <string name="text_sound_explosion">Explosión</string>

    <string name="text_game_score">Score: 0</string>
    <string name="text_game_start">Iniciar juego</string>




    <string name="text_game_instruction">Intrucciones</string>

    <string name="text_soundEfecct">Efectos de sonido</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Información</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Usuario</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>