<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="max_score"
            app:title="Maximo puntaje "
            app:summary="Set the maximum score"
            app:defaultValue="100"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="shake_detection_method"
            app:title="Modo de detección de acción 'Estira'"
            app:summary="Elige un modo para detectar la acción 'Shake It'"
            app:entries="@array/shake_detection_entries"
            app:entryValues="@array/shake_detection_values"
            app:defaultValue="Acelerometro"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="difficulty_Settings"
            app:title="Nivel de dificultad"
            app:summary="Ajustar la velocidad según aciertos"
            app:defaultValue="5"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="shake_threshold"
            app:title="Umbral de agitación"
            app:summary="Ajustar el umbral de vibración (entre 0 y 8 recomendado)"
            app:defaultValue="2.0"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="rotation_threshold"
            app:title="Umbral de rotación"
            app:summary="Ajustar el umbral de rotación (entre 0 y 3 recomendado)"
            app:defaultValue="2.0"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>
